--- a/config.ini
+++ b/config.ini
@@ -1,9 +1,20 @@
+; This is the config file.
+
+
+
 [session]
-token = [put your token value to asf_alaska site here]
+; please input your authentication token here
+token = 
+; please input the AOI shapefile path of directory.
 aoi_shapefile_path= district_shapefile
 
+
 [session_parameters]
+; please input the processing level here. Default parameter is GRD_HD
 processingLevel= GRD_HD
+; please input the starting sensing period here in the format [ YYYY-MM-DD ].
 startDate=2021-06-01
+; please input the ending sensing period here in the format [ YYYY-MM-DD ].
 endDate=2021-06-30
+; please input the flight direction ( ASCENDING / DESCENDING ).
 flightDirection= Descending
